--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionName="0.02" package="mobi.omegacentauri.FastLaunch"
       >
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="mobi.omegacentauri.FastLaunch.Popup"
       			  android:configChanges="keyboard|keyboardHidden|orientation"
                   android:label="@string/app_name"
