--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="2"
-      android:versionName="0.02" package="mobi.omegacentauri.FastLaunch"
+      android:versionCode="3"
+      android:versionName="1.00" package="mobi.omegacentauri.FastLaunch"
       >
 
     <application android:label="@string/app_name" android:icon="@drawable/icon">
@@ -14,7 +14,7 @@
                 <category android:name="android.intent.category.DEFAULT" /> 
             </intent-filter>
         </activity>
-		<activity android:name=".Options" android:label="Options" />
+<!-- 		<activity android:name=".Options" android:label="Options" />  -->
         <activity android:name="mobi.omegacentauri.FastLaunch.Apps"
       			  android:configChanges="keyboard|keyboardHidden|orientation"
                   android:launchMode="singleTask"
